# JackOfAllTrades

./: .gitmodules  README.md
CppSqlPerser/: CMakeLists.txt  CppSqlParser.cpp  CppSqlParser.hpp
CppSqlPerser/src/: CMakeLists.txt  CppSqlParser.cpp  CppSqlParser.hpp
CppSqlPerser/test/: CMakeLists.txt  compile_commands.json  main.cpp
DevEnv/: .vimrc  Dockerfile  install.sh
DevEnv/templates/: =template=.bash  =template=.c  =template=.cpp  =template=.h  =template=.py  =template=.sh
SqliteFetcher/: .gitignore  CMakeLists.txt  README.md
SqliteFetcher/doc/: Doxyfile
SqliteFetcher/doc/html/: SqliteFetcher_8hpp_source.html  annotated.html  classes.html  classsf_1_1Data-members.html  classsf_1_1Data.html  classsf_1_1Fetcher-members.html  classsf_1_1Fetcher.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacesf.html  namespacesf_1_1sql__types.html  structsf_1_1ExecResult__t-members.html  structsf_1_1ExecResult__t.html
SqliteFetcher/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_2.js  (+9 more)
SqliteFetcher/doc/latex/: annotated.tex  classsf_1_1Data.tex  classsf_1_1Fetcher.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  namespaces.tex  namespacesf.tex  namespacesf_1_1sql__types.tex  refman.tex  structsf_1_1ExecResult__t.tex
SqliteFetcher/src/: SqliteFetcher.cpp  SqliteFetcher.hpp
SqliteFetcher/test/: main.cpp
